--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Portfolio</title>
-<script src="+PImage src;
+<script> +PImage src;
 
 void setup() {
   size(1500, 900);
@@ -28,7 +28,7 @@ void draw() {
   int dh = 500;
 
   copy(src, sx, sy, sw, sh, dx, dy, dw, dh);
-}"></script>
+} </script>
 </head>
 <body>
   <p>Hello, World!</p>
