--- a/index.html
+++ b/index.html
@@ -5,32 +5,17 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Portfolio</title>
-<script> + PImage src;
-
-void setup() {
-  size(1500, 900);
-  src = loadImage("northkoreaninteriors6-1.jpg");
-}
-
-void draw() {
-  background(0);
-  
-  image(src,0,0);
-
-  int sx = mouseX;
-  int sy = mouseY;
-  int sw = 300;
-  int sh = 300;
-
-  int dx = mouseX;
-  int dy = mouseY;
-  int dw = 500;
-  int dh = 500;
-
-  copy(src, sx, sy, sw, sh, dx, dy, dw, dh);
-} </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.0/processing.min.js"></script>
+	</head>
 </head>
 <body>
+ <script type="application/processing">
+	void setup(){size(200, 200);}
+	void draw(){background(50);
+           ellipse(mouseX, mouseY, 50, 50);
+			}
+		</script>
+		<canvas> </canvas>
   <p>Hello, World!</p>
 	
 </body>
