--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Portfolio</title>
- <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js"></script>
+<html>
+  <head>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js"></script>
     <script src="sketch.js"></script>
-	</head>
+  </head>
+  <body>
+    <main>
+    </main>
+  </body>
 
-<body>
   <p>Hello, World!</p>
 	
 </body>
