--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
  <html>
   <head>
 
-  <iframe src="https://openprocessing.org/sketch/414352/embed/" width="400" height="400"></iframe>
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js"></script>
+    <script src="sketch.js"></script>
 
 
   </head>
