--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
  <html>
   <head>
 
-  <script type="javascript" src= "processing.js"></script>
+  <script type="text/javascript" src= "processing.js"></script>
     <script src="sketch.js"></script>
+	  
 
 
   </head>
   <body>
+	  <script type="text/processing">
+	  PImage src;
+
+void setup() {
+  size(1500, 900);
+  src = loadImage("northkoreaninteriors6-1.jpg");
+}
+
+void draw() {
+  background(0);
+  
+  image(src,0,0);
+
+  int sx = mouseX;
+  int sy = mouseY;
+  int sw = 300;
+  int sh = 300;
+
+  int dx = mouseX;
+  int dy = mouseY;
+  int dw = 500;
+  int dh = 500;
+
+  copy(src, sx, sy, sw, sh, dx, dy, dw, dh);
+}
+	  </script>
+	  <canvas id ="sketch" style="border: 1px solid black;"> </canvas>
     <main>
     </main>
 
