--- a/index.html
+++ b/index.html
@@ -2,21 +2,39 @@
   <head>
 
   <script type="text/javascript" src= "processing.js"></script>
-    <script src="sketch.js"></script>
+    <script src="sketch.js">
+	  
+	  </script>
 	  
 
 
   </head>
   <body>
 	  <script type="text/processing">
-	  PImage src;
+	import processing.core.*;
+import processing.data.*;
+import processing.event.*;
+import processing.opengl.*;
 
-void setup() {
-  size(1500, 900);
+import java.util.HashMap;
+import java.util.ArrayList;
+import java.io.File;
+import java.io.BufferedReader;
+import java.io.PrintWriter;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.io.IOException;
+
+public class copy_and_paste_ extends PApplet {
+
+PImage src;
+
+public void setup() {
+  /* size commented out by preprocessor */;
   src = loadImage("northkoreaninteriors6-1.jpg");
 }
 
-void draw() {
+public void draw() {
   background(0);
   
   image(src,0,0);
@@ -32,6 +50,19 @@ void draw() {
   int dh = 500;
 
   copy(src, sx, sy, sw, sh, dx, dy, dw, dh);
+}
+
+
+  public void settings() { size(1500, 900); }
+
+  static public void main(String[] passedArgs) {
+    String[] appletArgs = new String[] { "copy_and_paste_" };
+    if (passedArgs != null) {
+      PApplet.main(concat(appletArgs, passedArgs));
+    } else {
+      PApplet.main(appletArgs);
+    }
+  }
 }
 	  </script>
 	  <canvas id ="sketch" style="border: 1px solid black;"> </canvas>
