--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
   <head>
 
   <script type="text/javascript" src= "processing.js"></script>
-    <script src="sketch.js">
-	  
-	  </script>
+    <script src="sketch.js"> </script>
 	  
 
 
