--- a/index.html
+++ b/index.html
@@ -2,14 +2,8 @@
   <head>
 
   <script type="text/javascript" src= "processing.js"></script>
-    <script src="sketch.js"> </script>
-	  
-
-
-  </head>
-  <body>
-	  <script type="text/processing">
-import processing.core.*;
+    <script src="sketch.js">
+	    import processing.core.*;
 import processing.data.*;
 import processing.event.*;
 import processing.opengl.*;
@@ -62,7 +56,14 @@ public void draw() {
     }
   }
 }
-	  </script>
+	 </script>
+	  
+
+
+  </head>
+  <body>
+	  <script type="text/processing">
+  </script>
 	  <canvas id ="sketch" style="border: 1px solid black;"> </canvas>
     <main>
     </main>
