--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
 
   <script type="text/javascript" src= "processing.js"></script>
-	  
+	   <script src="sketch.js"> </script>	 
   </head>
 	 
   <body>
@@ -59,7 +59,8 @@ public void draw() {
       PApplet.main(appletArgs);
     }
   }
-}</script>
+}
+	  </script>
 	  <canvas id ="sketch" style="border: 1px solid black;"></canvas>
     <main>
     </main>
