--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
   <head>
 
-  <script type="text/javascript" src= "processing.js"></script>
-	   <script src="sketch.js"> 
-		   import processing.core.*;
+  <script type="text/javascript" src= "processing.js">  
+	  import processing.core.*;
 import processing.data.*;
 import processing.event.*;
 import processing.opengl.*;
@@ -55,7 +54,9 @@ public void draw() {
       PApplet.main(appletArgs);
     }
   }
-}
+}</script>
+	   <script src="sketch.js"> 
+		 
 	  </script>	 
   </head>
 	 
