--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
   <head>
 
-  <script type="text/javascript" src= "processing.js">  
+  <script type="text/javascript" src= "processing.js"></script>
+	   <script src="sketch.js"></script>	 
+  </head>
+	 
+  <body>
+	  <script type="text/processing"> 
 	  import processing.core.*;
 import processing.data.*;
 import processing.event.*;
@@ -54,19 +59,10 @@ public void draw() {
       PApplet.main(appletArgs);
     }
   }
-}</script>
-	   <script src="sketch.js"> 
-		 
-	  </script>	 
-  </head>
-	 
-  <body>
-	  <script type="text/processing">
-
+}
 	  </script>
 	  <canvas id ="sketch" style="border: 1px solid black;"></canvas>
-    <main>
-    </main>
+   
 
 
   <p>Hello, World!</p>
