--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
 
-  <script src= "processing.js"></script>
+  <script type="text/javascript" src= "processing.js"></script>
 	   <script src="sketch.js"></script>	 
   </head>
 	 
