--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 
 <head>
 
-    <script type="text/javascript" src="processing.js"></script>
-    
+    <script type="javascript" src="processing.js"></script>
+     <script src="sketch.js"></script>
 </head>
 
 <body>
-    <script type="text/processing">
+    <script type="processing">
 import processing.core.*;
 import processing.data.*;
 import processing.event.*;
