--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 
-    <script type="javascript" src="copy_and_paste_.java"></script>
+    <script type="javascript" src="copy_and_paste_.java.js"></script>
      <script src="sketch.js"></script>
 </head>
 
