--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <head>
 
-    <script type="javascript" src="copy_and_paste_.java.js"></script>
-     <script src="sketch.js"></script>
+    <script type="javascript" src="processing.js"></script>
+     <script src="copy_and_paste_.java"></script>
 </head>
 
 <body>
