--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
     <script type="text/javascript" src="processing.js"></script>
-     <script src="copy_and_paste_.java"></script>
+     <script src="copy_and_paste_.pde"></script>
 </head>
 
 <body>
