--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
 
     <script type="text/javascript" src="processing.js"></script>
@@ -11,7 +12,7 @@
 PImage src;
 
 void setup() {
-  size(900, 900);
+  size(1500, 900);
   src = loadImage("northkoreaninteriors6-1.jpg");
 }
 
@@ -32,68 +33,53 @@ void draw() {
 
   copy(src, sx, sy, sw, sh, dx, dy, dw, dh);
 }
+	  </script>
+    <canvas id="sketch" style="border: 1px solid black;"></canvas>
+
+    <p>Hello, World!</p>
+
+</body>
+
+</html><html>
+
+<head>
+
+    <script type="text/javascript" src="processing.js"></script>
+     
+</head>
+
+<body>
+    <script type="text/processing">
 
 PImage src;
 
 void setup() {
-  size(700, 900);
-  src = loadImage("showimg_wkr02_full-1.jpg");
-  background(0);
+  size(1500, 900);
+  src = loadImage("northkoreaninteriors6-1.jpg");
 }
 
 void draw() {
+  background(0);
   
-  int wave1 = int(map(sin(radians(frameCount*0.76)),-1,1,0,width));
-  int wave2 = int(map(sin(radians(frameCount)),-1,1,0,width));
-  
-  int sx = wave1;
-  int sy = 0;
-  int sw = 100;
-  int sh = 900;
+  image(src,0,0);
 
-  int dx = wave2;
-  int dy = 0;
-  int dw = 100;
-  int dh = 900;
+  int sx = mouseX;
+  int sy = mouseY;
+  int sw = 300;
+  int sh = 300;
+
+  int dx = mouseX;
+  int dy = mouseY;
+  int dw = 500;
+  int dh = 500;
 
   copy(src, sx, sy, sw, sh, dx, dy, dw, dh);
-
 }
-
-
-void setup(){
- size(900,900); 
- img = loadImage("showimg_wkr10_full.jpg");
- background(0);
-}
-
-void draw(){
-  
-  
-  push();
-  translate(width/2,height/2);
-  
-  int sx = 0;
-  int sy = int(map(sin(radians(frameCount*0.9)),-1,1,10,img.height-10));
-  int sw = int(width);
-  int sh = 20;
-  
-  int dx = 0;
-  int dy = 0;
-  int dw = int(width*0.4);
-  int dh = 20;
-  
-  rotate(radians(frameCount));
-  translate(width*0.05,0);
-  copy(img,sx,sy,sw,sh,dx,dy,dw,dh);
-  
-  pop();
-}
- </script>
+	  </script>
     <canvas id="sketch" style="border: 1px solid black;"></canvas>
 
     <p>Hello, World!</p>
-	PImage img; 
+
 </body>
 
 </html>
