--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+     <link rel="stylesheet" href="styles.css">
 
     <script type="text/javascript" src="processing.js"></script>
      
