--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
      <link rel="stylesheet" href="styles.css">
 
     <script type="text/javascript" src="processing.js"></script>
-     
+  <style>
+ p {
+  color: red;
+  font-family: courier;
+  font-size: 160%;
+}	
+	
+	
+	</style>   
 </head>
 
 <body>
