--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-     <link rel="stylesheet" href="styles.css">
+    
 
     <script type="text/javascript" src="processing.js"></script>
   <style>
@@ -9,6 +9,7 @@
   color: red;
   font-family: courier;
   font-size: 160%;
+  border: 2px solid powderblue; 
 }	
 	
 	
