--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@ row:after {
   <h1>kitsch</h1></div>
  <div class="row"> 
   <div class="column">
-  <PImage src;
+	    <script type="text/processing">
+  PImage src;
 
 void setup() {
   size(1500, 900);
@@ -78,7 +79,7 @@ void draw() {
   </script>" style="width:100%">
 </div>
 </div>
-  <script type="text/processing">
+
 
 
     <canvas id="sketch" style="border: 1px solid black;"></canvas>
