--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <html>
 
 <head>
-    
-
-    <script type="text/javascript" src="processing.js"></script>
+ <script type="text/javascript" src="processing.js"></script>
   <style>
 * {
 box-sizing: border-box;
@@ -40,7 +38,6 @@ row:after {
   font-size: 160%;
   border: 2px solid powderblue; 
 }
-	  
 
 	</style>   
 </head>
@@ -77,16 +74,14 @@ void draw() {
 }
 
   </script>" style="width:100%">
+	   </script> <canvas id="sketch" style="border: 1px solid black;"></canvas>
 </div>
 </div>
 
 
-
-    <canvas id="sketch" style="border: 1px solid black;"></canvas>
 
     <p>Hello, World!</p>
 
-</section>
 </body>
 
 </html>
