--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 	
  <script type="text/javascript" src="processing.js"></script>	  
- 	</style> 
+ 	<style>
 	p {
   color: red;
   font-family: courier;
   font-size: 160%;
   border: 2px solid powderblue; 
 }
-
+</style> 
   
 </head>
 	
