--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
 void setup() {
   size(1300, 900);
-  src = loadImage("northkoreaninteriors6-1.jpg");
+  scale(0.5)
+  src = loadImage("northkoreaninteriors6-1.jpg");  
 }
 
 void draw() {
