--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	
 <body> 
  
-	   </script> <canvas id="sketch" style="border: 1px solid black;"></canvas>
+	 <canvas id="sketch" style="border: 1px solid black;"></canvas>
 
 <div grid-row="" grid-pad="2" grid-gutter="4" grid-responsive="">
 	<div grid-col="x11" grid-pad="2"></div>
@@ -48,6 +48,7 @@ void draw() {
   int dh = 500;
 
   copy(src, sx, sy, sw, sh, dx, dy, dw, dh);
+	</script>
 }
 {image 78}
 {image 83}
@@ -64,7 +65,7 @@ void draw() {
 {image 87}
 {image 90}
 </div>
-
+  
 
     <p>Hello, World!</p>
 
