--- a/index.html
+++ b/index.html
@@ -15,15 +15,8 @@
 </head>
 	
 <body> 
- 
-	 <canvas id="sketch" style="border: 1px solid black;"></canvas>
+   <script type="text/processing">
 
-<div grid-row="" grid-pad="2" grid-gutter="4" grid-responsive="">
-	<div grid-col="x11" grid-pad="2"></div>
-	<div grid-col="x11" grid-pad="2"></div>
-</div><div class="image-gallery" gid="1">
- <script type="text/processing">
-{ 
   PImage src;
 
 void setup() {
@@ -48,24 +41,11 @@ void draw() {
   int dh = 500;
 
   copy(src, sx, sy, sw, sh, dx, dy, dw, dh);
-	</script>
 }
-{image 78}
-{image 83}
-{image 75}
-{image 84}
-{image 85}
-{image 70}
-{image 80}
-{image 74}
-{image 86}
-{image 89}
-{image 73}
-{image 88}
-{image 87}
-{image 90}
-</div>
-  
+	   </script> <canvas id="sketch" style="border: 1px solid black;"></canvas>
+
+
+
 
     <p>Hello, World!</p>
 
