--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
   PImage src;
 
 void setup() {
-  size(1300, 900);
-  scale(0.5);
+size(400, 400);
+rect(120, 80, 200, 200);
+scale(0.5);
+rect(120, 80, 200, 200)
   src = loadImage("northkoreaninteriors6-1.jpg");  
 }
 
