--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   PImage src;
 
 void setup() {
- 
+  size(400, 400);
   rect(120, 80, 200, 200);
-  scale(1);
+ 
   rect(120, 80, 200, 200)
   src = loadImage("northkoreaninteriors6-1.jpg");  
 }
