--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
   PImage src;
 
 void setup() {
-  size(400, 400);
-  rect(120, 80, 200, 200);
- 
-  rect(120, 80, 200, 200)
+   image(img,100,200,900,600);
   src = loadImage("northkoreaninteriors6-1.jpg");  
 }
 
