--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
   PImage src;
 
-void setup() {
-   image(img,100,200,900,600);
-  src = loadImage("northkoreaninteriors6-1.jpg");  
+void setup() 
+
+  src = loadImage("northkoreaninteriors6-1.jpg",100,200,900);  
 }
 
 void draw() {
