--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   PImage src;
 
 void setup() 
-  size = (400,400);
-  src = loadImage("northkoreaninteriors6-1.jpg",100,200,900);  
+  size = (700,400);
+  src = loadImage("northkoreaninteriors6-1.jpg");  
 }
 
 void draw() {
