--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 
   PImage src;
 
-void setup() 
-  size = (700,400);
+void setup() {
+  size(1300, 900);
+  scale(0.5)
   src = loadImage("northkoreaninteriors6-1.jpg");  
 }
 
