--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ PImage src;
 void setup() {
   size(300, 242);
   scale (0.5);
-  src = loadImage("northkoreaninteriors6-1.jpg");
+  src = loadImage("northkoreaninteriors6-1ㅣㅏ.jpg");
 }
 
 void draw() {
