--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ PImage src;
 void setup() {
   size(899, 725);
   
-  src = loadImage("northkoreaninteriors6-1ㅣㅏ.jpg");
+  src = loadImage("northkoreaninteriors6-1.jpg");
 }
 
 void draw() {
