--- a/index.html
+++ b/index.html
@@ -4,44 +4,44 @@
 	
  <script type="text/javascript" src="processing.js"></script>	  
  	<style>
-	p {
-  color: red;
-  font-family: courier;
-  font-size: 160%;
-  border: 2px solid powderblue; 
-}
+
 </style> 
   
 </head>
 	
 <body> 
    <script type="text/processing">
-PImage src;
+PImage img; 
 
-void setup() {
-  size(899, 725);
+void setup(){
+ size(500,500); 
+
+ img = loadImage("showimg_wkr05_full.jpg");
+ background(0);
+}
+
+void draw(){
   
-  src = loadImage("northkoreaninteriors6-1.jpg");
+  
+  push();
+  translate(width/2,height/2);
+  
+  int sx = 0;
+  int sy = int(map(sin(radians(frameCount*0.9)),-1,1,10,img.height-10));
+  int sw = int(width);
+  int sh = 20;
+  
+  int dx = 0;
+  int dy = 0;
+  int dw = int(width*0.4);
+  int dh = 20;
+  
+  rotate(radians(frameCount));
+  translate(width*0.05,0);
+  copy(img,sx,sy,sw,sh,dx,dy,dw,dh);
+  
+  pop();
 }
-
-void draw() {
-  background(0);
-   
-  image(src,0,0);
-
-  int sx = mouseX;
-  int sy = mouseY;
-  int sw = 600;
-  int sh = 600;
-
-  int dx = mouseX;
-  int dy = mouseY;
-  int dw = 500;
-  int dh = 500;
-
-  copy(src, sx, sy, sw, sh, dx, dy, dw, dh);
-}
-
 
 
    </script> <canvas id="sketch" style="border: 1px solid black;"></canvas>
@@ -49,7 +49,6 @@ void draw() {
 
 
 
-    <p>Hello, World!</p>
 
 </body>
 
