--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
 	
  <script type="text/javascript" src="processing.js"></script>	  
- 	<style>
-
-</style> 
+  
   
 </head>
 	
 <body> 
    <script type="text/processing">
-PImage img; 
+PImage src; 
 
 void setup(){
  size(900,900); 
