--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@ void draw(){
   copy(img,sx,sy,sw,sh,dx,dy,dw,dh);
   
   pop();
-} </div>
+}  </script>
+    <canvas id="sketch" style="border: 1px solid black;"></canvas> </div>
 	<div class="item">C</div>
 	<div class="item">D</div>
 	<div class="item">E</div>
