--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ void draw() {
 }
 	  </script>
     <canvas id="sketch" style="border: 1px solid black;"></canvas></div>
-	<div class="item"> 
+	<div class="item"> <script type="text/processing">
 		PImage img; 
 
 void setup(){
