--- a/index.html
+++ b/index.html
@@ -1,63 +1,15 @@
 <html>
 
 <head>
-	
- <script type="text/javascript" src="processing.js"></script>	  
- 	<style>
-	p {
-  color: red;
-  font-family: courier;
-  font-size: 160%;
-  border: 2px solid powderblue; 
-	}
-	container {
-   align-content: stretch;
-	/* align-content: start; */
-	/* align-content: center; */
-	/* align-content: end; */
-	/* align-content: space-between; */
-	/* align-content: space-around; */
-	/* align-content: space-evenly; */
-	}
-</style> 
-  
-</head>
-	
-<body> 
 
-   
- <div class="container">
-	<div class="item">   
+    <script type="text/javascript" src="processing.js"></script>
+     
+</head>
+
+<body>
     <script type="text/processing">
 
-PImage src;
-
-void setup() {
-  size(899, 725);
-  src = loadImage("northkoreaninteriors6-1.jpg");
-}
-
-void draw() {
-  background(0);
-  
-  image(src,0,0);
-
-  int sx = mouseX;
-  int sy = mouseY;
-  int sw = 300;
-  int sh = 300;
-
-  int dx = mouseX;
-  int dy = mouseY;
-  int dw = 500;
-  int dh = 500;
-
-  copy(src, sx, sy, sw, sh, dx, dy, dw, dh);
-}
-	  </script>
-    <canvas id="sketch" style="border: 1px solid black;"></canvas></div>
-	<div class="item"> <script type="text/processing">
-		PImage img; 
+PImage img; 
 
 void setup(){
  size(900,900); 
@@ -87,22 +39,18 @@ void draw(){
   copy(img,sx,sy,sw,sh,dx,dy,dw,dh);
   
   pop();
-}  </script>
-    <canvas id="sketch" style="border: 1px solid black;"></canvas> </div>
-	<div class="item">C</div>
-	<div class="item">D</div>
-	<div class="item">E</div>
-	<div class="item">F</div>
-	<div class="item">G</div>
-	<div class="item">H</div>
-	<div class="item">I</div>
-</div>
-
-
+}
+	  </script>
+    <canvas id="sketch" style="border: 1px solid black;"></canvas>
 
     <p>Hello, World!</p>
 
 </body>
 
 </html>
+
+
+
+
+
 
