--- a/index.html
+++ b/index.html
@@ -3,22 +3,28 @@
 <head>
 
     <script type="text/javascript" src="processing.js"></script>
-     
+     <style>
+	p {
+  color: red;
+  font-family: courier;
+  font-size: 160%;
+  border: 2px solid powderblue; 
+}
+</style> 
 </head>
 
 <body>
     <script type="text/processing">
-
-PImage img; 
+PImage src; 
 
 void setup(){
  size(900,900); 
 
- img = loadImage("showimg_wkr05_full.jpg");
- background(0);
+ src = loadImage("showimg_wkr05_full.jpg");
 }
 
 void draw(){
+background(0);
   
   
   push();
@@ -38,7 +44,7 @@ void draw(){
   translate(width*0.05,0);
   copy(img,sx,sy,sw,sh,dx,dy,dw,dh);
   
-
+  pop();
 }
 	  </script>
     <canvas id="sketch" style="border: 1px solid black;"></canvas>
