--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
 <body>
     <script type="text/processing">
-PImage src; 
+PImage img; 
 
 void setup(){
  size(900,900); 
 
- src = loadImage("showimg_wkr05_full.jpg");
+ img = loadImage("showimg_wkr05_full.jpg");
+ background(0);
 }
 
 void draw(){
-background(0);
   
   
   push();
