--- a/index.html
+++ b/index.html
@@ -1,62 +1,75 @@
 <html>
 
 <head>
-
-    <script type="text/javascript" src="processing.js"></script>
-     <style>
+	
+ <script type="text/javascript" src="processing.js"></script>	  
+ 	<style>
 	p {
   color: red;
   font-family: courier;
   font-size: 160%;
   border: 2px solid powderblue; 
-}
+	}
+	container {
+   align-content: stretch;
+	/* align-content: start; */
+	/* align-content: center; */
+	/* align-content: end; */
+	/* align-content: space-between; */
+	/* align-content: space-around; */
+	/* align-content: space-evenly; */
+	}
 </style> 
+  
 </head>
+	
+<body> 
 
-<body>
+   
+ <div class="container">
+	<div class="item">   
     <script type="text/processing">
-PImage img; 
 
-void setup(){
- size(900,900); 
+PImage src;
 
- img = loadImage("showimg_wkr05_full.jpg");
- background(0);
+void setup() {
+  size(899, 725);
+  src = loadImage("northkoreaninteriors6-1.jpg");
 }
 
-void draw(){
+void draw() {
+  background(0);
   
-  
-  push();
-  translate(width/2,height/2);
-  
-  int sx = 0;
-  int sy = int(map(sin(radians(frameCount*0.9)),-1,1,10,img.height-10));
-  int sw = int(width);
-  int sh = 20;
-  
-  int dx = 0;
-  int dy = 0;
-  int dw = int(width*0.4);
-  int dh = 20;
-  
-  rotate(radians(frameCount));
-  translate(width*0.05,0);
-  copy(img,sx,sy,sw,sh,dx,dy,dw,dh);
-  
-  pop();
+  image(src,0,0);
+
+  int sx = mouseX;
+  int sy = mouseY;
+  int sw = 300;
+  int sh = 300;
+
+  int dx = mouseX;
+  int dy = mouseY;
+  int dw = 500;
+  int dh = 500;
+
+  copy(src, sx, sy, sw, sh, dx, dy, dw, dh);
 }
 	  </script>
-    <canvas id="sketch" style="border: 1px solid black;"></canvas>
+    <canvas id="sketch" style="border: 1px solid black;"></canvas></div>
+	<div class="item">B</div>
+	<div class="item">C</div>
+	<div class="item">D</div>
+	<div class="item">E</div>
+	<div class="item">F</div>
+	<div class="item">G</div>
+	<div class="item">H</div>
+	<div class="item">I</div>
+</div>
+
+
 
     <p>Hello, World!</p>
 
 </body>
 
 </html>
-
-
-
-
-
-
