--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ PImage src;
 
 void setup() {
   size(900, 900);
-  src = loadImage("northkoreaninteriors6-1.jpg");
+  src = loadImage("showimg_wkr02_full.jpg");
   background(0);
 }
 
