--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ void draw() {
   copy(src, sx, sy, sw, sh, dx, dy, dw, dh);
 }
 	  </script>
-    <canvas id="sketch" style="border: 1px solid black;"></canvas></div>
+    </div>
 	<div class="item">    <script type="text/processing">
 
 PImage img; 
@@ -89,7 +89,7 @@ void draw(){
   pop();
 }	  </script>
 	
-    <canvas id="sketch" style="border: 1px solid black;"></canvas> </div>
+     </div>
 	<div class="item">    <script type="text/processing">
 PImage src;
 
@@ -117,7 +117,7 @@ void draw() {
   copy(src, sx, sy, sw, sh, dx, dy, dw, dh);
 
 }    </script>
- <canvas id="sketch" style="border: 1px solid black;"></canvas></div>
+ </div>
 </div>
 	<div class="item">D</div>
 	<div class="item">E</div>
