--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ void draw() {
 
   copy(src, sx, sy, sw, sh, dx, dy, dw, dh);
 }
-	  </script>
+	  </script> <canvas id="sketch" style="border: 1px solid black;"></canvas>
     </div>
 	<div class="item">    <script type="text/processing">
 
@@ -87,7 +87,7 @@ void draw(){
   copy(img,sx,sy,sw,sh,dx,dy,dw,dh);
   
   pop();
-}	  </script>
+}	  </script> <canvas id="sketch" style="border: 1px solid black;"></canvas>
 	
      </div>
 	<div class="item">    <script type="text/processing">
@@ -116,7 +116,7 @@ void draw() {
 
   copy(src, sx, sy, sw, sh, dx, dy, dw, dh);
 
-}    </script>
+}    </script> <canvas id="sketch" style="border: 1px solid black;"></canvas>
  </div>
 </div>
 	<div class="item">D</div>
