--- a/index.html
+++ b/index.html
@@ -119,7 +119,39 @@ void draw() {
 }    </script> <canvas id="sketch" style="border: 1px solid black;"></canvas>
  </div>
 </div>
-	<div class="item">D</div>
+	<div class="item"> <script type="text/processing">
+PImage img; 
+
+void setup(){
+ size(900,900); 
+
+ img = loadImage("northkoreaninteriors4.jpg");
+ background(0);
+}
+
+void draw(){
+  
+  
+  push();
+  translate(width/2,height/2);
+  
+  int sx = 0;
+  int sy = int(map(sin(radians(frameCount*0.9)),-1,1,10,img.height-10));
+  int sw = int(width);
+  int sh = 20;
+  
+  int dx = 0;
+  int dy = 0;
+  int dw = int(width*0.4);
+  int dh = 20;
+  
+  rotate(radians(frameCount));
+  translate(width*0.05,0);
+  copy(img,sx,sy,sw,sh,dx,dy,dw,dh);
+  
+  pop();
+}
+</script> <canvas id="sketch" style="border: 1px solid black;"></canvas></div>
 	<div class="item">E</div>
 	<div class="item">F</div>
 	<div class="item">G</div>
