--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ PImage img;
 void setup(){
  size(900,900); 
 
- img = loadImage("northkoreaninteriors4.jpg");
+ img = loadImage("Screen Shot 2023-02-21 at 12.04.13 AM.png");
  background(0);
 }
 
