--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ void draw() {
 	<div class="item">G</div>
 	<div class="item">H</div>
 	<div class="item">I</div>
-
+</div>
 
 
     <p>Hello, World!</p>
