--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ void setup() {
   size(900, 900);
   src = loadImage("showimg_wkr02_full.jpg");
   background(0);
+  img.resize(width/2, 0)
 }
 
 void draw() {
