--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 PImage src;
 
 void setup() {
-  size(1500, 900);
-  src = loadImage("northkoreaninteriors6-1.jpg");
+  size(899, 729);
+  src = loadImage("showimg_wkr02_full.jpg");
 }
 
 void draw() {
@@ -37,7 +37,7 @@ void draw() {
 	  </script>
     <canvas id="sketch" style="border: 1px solid black;"></canvas>
 
-    <p>Hello, World!</p>
+    <p>human pixel</p>
 
 </body>
 
