--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ PImage src;
 
 void setup() {
   size(899, 729);
-  src = loadImage("showimg_wkr02_full.jpg");
+  src = loadImage("여러개 .jpg");
 }
 
 void draw() {
