--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ PImage src;
 
 void setup() {
   size(1220, 811);
-  src = loadImage("여러개 .jpg");
+  src = loadImage("여러개_.jpg");
 }
 
 void draw() {
